syntax = "proto3";

package school;

import "google/protobuf/empty.proto";

service SchoolService {
    rpc Get (GetSchoolRequest) returns (GetSchoolResponse) {
    }
    rpc Add (AddSchoolRequest) returns (School){}
}

message AddSchoolRequest {
    string schoolName = 1;
}

message GetSchoolRequest {
    int32 id = 1;
}

message GetSchoolResponse {
    School school = 1;
}

message School {
    int32 id = 1;
    string name = 2;
}